# tzcheck

./: Cargo.toml  br.sh  build.sh  buildc.sh  tzcheck.c  tzcheck.py  tzcheck.zig
src/: logger.rs  main.rs
