[package]
name = "tzcheck"
version = "0.1.0"
authors = ["piotr"]
edition = "2018"

[profile.release]
debug = false
strip = true
#opt-level = 3
opt-level = 's'  # Optimize for size.
panic = 'abort'
lto = true
codegen-units = 1

[dependencies]
log = { vesion = "0.4.20", features = ["std"] }
#log = "0.4.20"
speedate = "0.13.0"

